allowed the clear button to have a fixed button show up on mobile

--- a/frontend/styles/Store.module.scss
+++ b/frontend/styles/Store.module.scss
@@ -10,7 +10,7 @@
         align-items: center;
         justify-content: center;
         margin-top: 10px;
-        
+
         &-bar {
             input {
                 height: 40px;
@@ -26,12 +26,13 @@
         width: 100%;
         flex-direction: column;
         margin: 10px;
-        @media only screen and (min-width: 400px) {
+        @media only screen and (min-width: 500px) {
             flex-direction: row;
         }
     }
 
-    &__pagination-button, &__back-to-top-button {
+    &__pagination-button,
+    &__back-to-top-button {
         background-color: $purple;
         width: 140px;
         padding: 0;
@@ -53,7 +54,8 @@
         }
     }
 
-    &__pagination-button:hover, &__back-to-top-button:hover {
+    &__pagination-button:hover,
+    &__back-to-top-button:hover {
         background-color: lighten($color: $purple, $amount: 10);
     }
 
@@ -64,19 +66,46 @@
         margin-bottom: 25px;
     }
 
-    &__category-list {
-        justify-content: center;
-        align-items: center;
-        display: flex;
-        flex-wrap: wrap;
-        margin: 25px 0;
+    &__category {
+        &-clear {
+            @media only screen and (max-width:750px) {
+                position: fixed;
+                width: 50px;
+                height: 50px;
+                bottom: 15px;
+                left: 15px;
+                z-index: 999;
+                padding: 30px;
+                background-color: $purple;
 
-        & > * {
-            margin: 5px;
+                &:hover {
+                    background-color: lighten($color: $purple, $amount: 10);
+                }
+
+                &:active {
+                    background-color: lighten($color: $purple, $amount: 15);
+                }
+            }
+
+            &-icon {
+                width: 40px;
+                height: 40px;
+            }
         }
+        &-list {
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-wrap: wrap;
+            margin: 25px 0;
 
-        & > *:nth-child(2) {
-            width: 200px;
+            & > * {
+                margin: 5px;
+            }
+
+            & > *:nth-child(2) {
+                width: 200px;
+            }
         }
     }
 
